tests/fixtures/syntax/valid/action_continuation_blank_line.repor
case "blank line ends continuation" {
  $ echo one \

  assert { exit 0 }
}
