tests/fixtures/syntax/invalid/action_continuation_swallows_next_line.repor
case "action continuation swallows only the next line" {
  $ true \
  assert {
    exit 0
  }
}
